; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if.c_intf_event_callback.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if.c_intf_event_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intf_event = type { i32, i32, i32 }
%struct.sockaddr = type { i32 }

@ifnet_evhdlr_ctxt = common dso_local global i32 0, align 4
@ifnet_event = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @intf_event_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intf_event_callback(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.intf_event*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.intf_event*
  store %struct.intf_event* %5, %struct.intf_event** %3, align 8
  %6 = load i32, i32* @ifnet_event, align 4
  %7 = load %struct.intf_event*, %struct.intf_event** %3, align 8
  %8 = getelementptr inbounds %struct.intf_event, %struct.intf_event* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.intf_event*, %struct.intf_event** %3, align 8
  %11 = getelementptr inbounds %struct.intf_event, %struct.intf_event* %10, i32 0, i32 1
  %12 = bitcast i32* %11 to %struct.sockaddr*
  %13 = load %struct.intf_event*, %struct.intf_event** %3, align 8
  %14 = getelementptr inbounds %struct.intf_event, %struct.intf_event* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @EVENTHANDLER_INVOKE(i32* @ifnet_evhdlr_ctxt, i32 %6, i32 %9, %struct.sockaddr* %12, i32 %15)
  ret void
}

declare dso_local i32 @EVENTHANDLER_INVOKE(i32*, i32, i32, %struct.sockaddr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
